--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "file-loader": "^3.0.1",
     "jsoneditor": "^5.32.5",
     "lodash": "^4.17.11",
