--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "clsx": "^1.1.1",
     "file-loader": "^3.0.1",
     "jsoneditor": "^5.32.5",
     "lodash": "^4.17.11",
@@ -14,6 +15,7 @@
     "react-csv": "^1.0.19",
     "react-dom": "^16.2.0",
     "react-icons": "^3.2.2",
+    "recharts": "^1.8.5",
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
